--- a/test/index.html
+++ b/test/index.html
@@ -5,8 +5,6 @@
 <script src="../node_modules/escodegen/escodegen.browser.min.js"></script>
 <script src="../node_modules/escope/escope.js"></script>
 
-<script src="../src/util.js"></script>
-
 <code><pre></pre></code>
 
 <script>
@@ -45,13 +43,13 @@
 </script>
 
 <script>
-	var src = getFileSource('1.js');
+	var src = getFileSource('2.js');
 	document.querySelector('pre').innerHTML = src;
 
 	var ast = esprima.parse(src);
 
 	var scopes = escope.analyze(ast, {optimistic: true});
 
-	console.log(scopes)
+	console.log(scopes.scopes[0])
 
 </script>
