--- a/test/index.html
+++ b/test/index.html
@@ -1,5 +1,8 @@
 <!doctype html>
 
+<!-- ES* analysers test -->
+
+
 <script src="../node_modules/esprima/esprima.js"></script>
 <script src="../node_modules/estraverse/estraverse.js"></script>
 <script src="../node_modules/escodegen/escodegen.browser.min.js"></script>
@@ -43,6 +46,9 @@
 </script>
 
 <script>
+	/**
+	 * Analyze the source
+	 */
 	var src = getFileSource('2.js');
 	document.querySelector('pre').innerHTML = src;
 
